--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "shetabit/payment": "^5.2",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
